Remove markdown-it-katex

--- a/package.json
+++ b/package.json
@@ -8,7 +8,5 @@
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
   },
-  "dependencies": {
-    "markdown-it-katex": "^2.0.3"
-  }
+  "dependencies": {}
 }
